--- a/VodenicharskaM_FinalProject_2023/Calendar.xaml
+++ b/VodenicharskaM_FinalProject_2023/Calendar.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="VodenicharskaM_FinalProject_2023.BrJewl"
+﻿<Window x:Class="VodenicharskaM_FinalProject_2023.Calendar"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VodenicharskaM_FinalProject_2023"
         mc:Ignorable="d"
-        Title="BrJewl" Height="1080" Width="1920" Background="#ECF8FF">
+        Title="Calendar" Height="1080" Width="1920" Background="#ECF8FF">
     <Grid>
         <Ellipse HorizontalAlignment="Left" 
                  Height="600" 
@@ -116,5 +116,38 @@
             BorderBrush="{x:Null}"
             Background="Transparent"/>
 
+        <Label Content="M  I  V  O  S  K  I" 
+               FontFamily="Gabriola"
+               FontSize="80"
+               HorizontalAlignment="Left" 
+               Margin="817,179,0,0" 
+               VerticalAlignment="Top" Height="147"/>
+
+        <Label Content="Fine jewelry, Restoration and Conservation" 
+               FontFamily="Segoe UI Light"
+               FontSize="30"
+               HorizontalAlignment="Left" 
+               Margin="751,290,0,0" 
+               VerticalAlignment="Top"/>
+
+        <TextBlock HorizontalAlignment="Left" 
+                   Margin="342,382,0,0" 
+                   Text="Save an appointment with us in a few clicks! Choose your preferred  time for the meeting and we will send you a confirmation email. " 
+                   FontSize="40"
+                FontFamily="Segoe UI Light"
+                   TextAlignment="Center"
+                   TextWrapping="Wrap" 
+                   VerticalAlignment="Top" 
+                   Height="150"
+                   Width="1291"/>
+
+        <Calendar HorizontalAlignment="Left" 
+                  Margin="781,537,0,0" 
+                  VerticalAlignment="Top"
+                  Width="480" 
+                  Height="480"
+                  FontFamily="Segoe UI Light"/>
+        
+        
     </Grid>
 </Window>
