--- a/VodenicharskaM_FinalProject_2023/Steps.xaml
+++ b/VodenicharskaM_FinalProject_2023/Steps.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="VodenicharskaM_FinalProject_2023.BrJewl"
+﻿<Window x:Class="VodenicharskaM_FinalProject_2023.Steps"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VodenicharskaM_FinalProject_2023"
         mc:Ignorable="d"
-        Title="BrJewl" Height="1080" Width="1920" Background="#ECF8FF">
+        Title="Steps" Height="1080" Width="1920" Background="#ECF8FF">
     <Grid>
         <Ellipse HorizontalAlignment="Left" 
                  Height="600" 
