connections between pages main to log in not working all else is fine

--- a/VodenicharskaM_FinalProject_2023/BrJewl.xaml
+++ b/VodenicharskaM_FinalProject_2023/BrJewl.xaml
@@ -78,7 +78,7 @@
                 Height="60"
                 Foreground="Black"
                 BorderBrush="{x:Null}"
-                Background="Transparent"/>
+                Background="Transparent" Click="Button_Click_3"/>
 
         <Button Content="Calendar" 
             Margin="1546,41,203,963"
@@ -87,7 +87,7 @@
             Height="60"
             Foreground="Black"
             BorderBrush="{x:Null}"
-            Background="Transparent"/>
+            Background="Transparent" Click="Button_Click_2"/>
 
         <Button Content="Steps" 
             Margin="1409,35,379,959"
@@ -96,7 +96,7 @@
             Height="70"
             Foreground="Black"
             BorderBrush="{x:Null}"
-            Background="Transparent"/>
+            Background="Transparent" Click="Button_Click_1"/>
 
         <Button Content="Browse Other" 
             Margin="1173,40,530,964"
@@ -105,7 +105,7 @@
             Height="60"
             Foreground="Black"
             BorderBrush="{x:Null}"
-            Background="Transparent"/>
+            Background="Transparent" Click="Button_Click"/>
 
         <Button Content="Browse Jewelry" 
             Margin="898,36,747,958"
