--- a/VodenicharskaM_FinalProject_2023/BrO.xaml
+++ b/VodenicharskaM_FinalProject_2023/BrO.xaml
@@ -79,7 +79,7 @@
                 Height="60"
                 Foreground="Black"
                 BorderBrush="{x:Null}"
-                Background="Transparent"/>
+                Background="Transparent" Click="Button_Click_3"/>
 
         <Button Content="Calendar" 
             Margin="1546,41,203,963"
@@ -88,7 +88,7 @@
             Height="60"
             Foreground="Black"
             BorderBrush="{x:Null}"
-            Background="Transparent"/>
+            Background="Transparent" Click="Button_Click_2"/>
 
         <Button Content="Steps" 
             Margin="1409,35,379,959"
@@ -97,11 +97,11 @@
             Height="70"
             Foreground="Black"
             BorderBrush="{x:Null}"
-            Background="Transparent"/>
+            Background="Transparent" Click="Button_Click_1"/>
 
         <Button Content="Browse Other" 
             Margin="1173,40,530,964"
-            FontFamily="Segoe UI Light"
+            FontFamily="Segoe UI Semibold"
             FontSize="20"
             Height="60"
             Foreground="Black"
@@ -110,12 +110,12 @@
 
         <Button Content="Browse Jewelry" 
             Margin="898,36,747,958"
-            FontFamily="Segoe UI Semibold"
+            FontFamily="Segoe UI Light"
             FontSize="20"
             Height="70"
             Foreground="Black"
             BorderBrush="{x:Null}"
-            Background="Transparent"/>
+            Background="Transparent" Click="Button_Click"/>
 
     </Grid>
 </Window>
