--- a/VodenicharskaM_FinalProject_2023/Order.xaml
+++ b/VodenicharskaM_FinalProject_2023/Order.xaml
@@ -74,7 +74,7 @@
 
         <Button Content="Order" 
                 Margin="1694,41,62,963"
-                FontFamily="Segoe UI Light"
+                FontFamily="Segoe UI Semibold"
                 FontSize="20"
                 Height="60"
                 Foreground="Black"
@@ -88,7 +88,7 @@
             Height="60"
             Foreground="Black"
             BorderBrush="{x:Null}"
-            Background="Transparent"/>
+            Background="Transparent" Click="Button_Click_3"/>
 
         <Button Content="Steps" 
             Margin="1409,35,379,959"
@@ -97,7 +97,7 @@
             Height="70"
             Foreground="Black"
             BorderBrush="{x:Null}"
-            Background="Transparent"/>
+            Background="Transparent" Click="Button_Click_2"/>
 
         <Button Content="Browse Other" 
             Margin="1173,40,530,964"
@@ -106,16 +106,16 @@
             Height="60"
             Foreground="Black"
             BorderBrush="{x:Null}"
-            Background="Transparent"/>
+            Background="Transparent" Click="Button_Click_1"/>
 
         <Button Content="Browse Jewelry" 
             Margin="898,36,747,958"
-            FontFamily="Segoe UI Semibold"
+            FontFamily="Segoe UI Light"
             FontSize="20"
             Height="70"
             Foreground="Black"
             BorderBrush="{x:Null}"
-            Background="Transparent"/>
+            Background="Transparent" Click="Button_Click"/>
 
         <Label Content="M  I  V  O  S  K  I" 
                FontFamily="Gabriola"
