--- a/VodenicharskaM_FinalProject_2023/Calendar.xaml
+++ b/VodenicharskaM_FinalProject_2023/Calendar.xaml
@@ -78,11 +78,11 @@
                 Height="60"
                 Foreground="Black"
                 BorderBrush="{x:Null}"
-                Background="Transparent"/>
+                Background="Transparent" Click="Button_Click_3"/>
 
         <Button Content="Calendar" 
             Margin="1546,41,203,963"
-            FontFamily="Segoe UI Light"
+            FontFamily="Segoe UI Semibold"
             FontSize="20"
             Height="60"
             Foreground="Black"
@@ -96,7 +96,7 @@
             Height="70"
             Foreground="Black"
             BorderBrush="{x:Null}"
-            Background="Transparent"/>
+            Background="Transparent" Click="Button_Click_2"/>
 
         <Button Content="Browse Other" 
             Margin="1173,40,530,964"
@@ -105,16 +105,16 @@
             Height="60"
             Foreground="Black"
             BorderBrush="{x:Null}"
-            Background="Transparent"/>
+            Background="Transparent" Click="Button_Click_1"/>
 
         <Button Content="Browse Jewelry" 
             Margin="898,36,747,958"
-            FontFamily="Segoe UI Semibold"
+            FontFamily="Segoe UI Light"
             FontSize="20"
             Height="70"
             Foreground="Black"
             BorderBrush="{x:Null}"
-            Background="Transparent"/>
+            Background="Transparent" Click="Button_Click"/>
 
         <Label Content="M  I  V  O  S  K  I" 
                FontFamily="Gabriola"
