--- a/VodenicharskaM_FinalProject_2023/SuccessOrd.xaml
+++ b/VodenicharskaM_FinalProject_2023/SuccessOrd.xaml
@@ -1,18 +1,17 @@
-﻿<Window x:Class="VodenicharskaM_FinalProject_2023.MainWindow"
+﻿<Window x:Class="VodenicharskaM_FinalProject_2023.SuccessOrd"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VodenicharskaM_FinalProject_2023"
         mc:Ignorable="d"
-        Title="MainWindow" Height="1080" Width="1920" Background="#ECF8FF">
-
+        Title="SuccessOrd" Height="1080" Width="1920" Background="#ECF8FF">
     <Grid>
 
         <Ellipse Fill="#CEECFF" 
                  HorizontalAlignment="Left" 
                  Height="550" 
-                 Margin="-160,-177,0,0" 
+                 Margin="-100,-80,0,0" 
                  Stroke="#CEECFF" 
                  VerticalAlignment="Top" 
                  Width="550"/>
@@ -20,7 +19,7 @@
         <Ellipse Fill="#CEECFF" 
                  HorizontalAlignment="Left" 
                  Height="450" 
-                 Margin="1674,684,0,0" 
+                 Margin="1590,684,0,0" 
                  Stroke="#CEECFF" 
                  VerticalAlignment="Top" 
                  Width="450"/>
@@ -28,7 +27,7 @@
         <Ellipse Fill="#BDDFFF" 
                  HorizontalAlignment="Left" 
                  Height="200" 
-                 Margin="1434,684,0,0" 
+                 Margin="1385,644,0,0" 
                  Stroke="#CEECFF" 
                  VerticalAlignment="Top" 
                  Width="200"/>
@@ -36,7 +35,7 @@
         <Ellipse Fill="#BDDFFF" 
                  HorizontalAlignment="Left" 
                  Height="300" 
-                 Margin="150,870,0,0" 
+                 Margin="102,834,0,0" 
                  Stroke="#CEECFF" 
                  VerticalAlignment="Top"
                  Width="300"/>
@@ -52,31 +51,34 @@
         <Ellipse Fill="#CEECFF" 
                  HorizontalAlignment="Left" 
                  Height="80" 
-                 Margin="455,870,0,0" 
+                 Margin="402,804,0,0" 
                  Stroke="#CEECFF" 
                  VerticalAlignment="Top" 
-                 Width="80"/>
+                 Width="80" RenderTransformOrigin="-0.154,0.109"/>
 
         <Label Content="M I V O S K I" 
-               FontSize="200" 
+               FontSize="170" 
                FontFamily="Gabriola" 
                HorizontalAlignment="Center"
                Margin="0,234,0,0" 
                VerticalAlignment="Top" 
-               FontWeight="Bold"/>
+               FontWeight="Bold" Height="236"/>
 
         <Label Content="Fine Jewelry, Restoration &amp; Conservation" 
                FontFamily="Segoe UI Light" 
                HorizontalAlignment="Center" 
-               FontSize="75" 
-               Margin="0,532,0,0" 
+               FontSize="45" 
+               Margin="0,451,0,0" 
                VerticalAlignment="Top"/>
 
-        <Button x:Name="MainCont"
-                Content="Button" 
-                Background="Transparent" 
-                Margin="0,0,0,0" 
-                Height="1080" Click="MainCont_Click"/>
+        <TextBlock Text="Your order was successfully completed!" 
+               FontFamily="Segoe UI Light" 
+               TextWrapping="Wrap"
+               HorizontalAlignment="Center"
+                   TextAlignment="Center"
+               FontSize="60" 
+               Margin="0,598,0,0" 
+               VerticalAlignment="Top" Width="850"/>
 
     </Grid>
 </Window>
