--- a/VodenicharskaM_FinalProject_2023/Calendar.xaml
+++ b/VodenicharskaM_FinalProject_2023/Calendar.xaml
@@ -1,78 +1,82 @@
 ﻿<Window x:Class="VodenicharskaM_FinalProject_2023.Calendar"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VodenicharskaM_FinalProject_2023"
         mc:Ignorable="d"
-        Title="Calendar" Height="810" Width="1440" Background="#ECF8FF">
-    <Grid>
-        <Ellipse HorizontalAlignment="Left" 
+        Title="Calendar" Height="1035" Width="1440" Background="#ECF8FF">
+
+    <ScrollViewer CanContentScroll="True" 
+                      VerticalScrollBarVisibility="Visible">
+        <Grid>
+            <Ellipse HorizontalAlignment="Left" 
                  Height="400" 
-                 Margin="-291,0,0,0" 
+                 Margin="-180,155,0,0" 
                  Stroke="Black" 
-                 VerticalAlignment="Center" 
+                 VerticalAlignment="Top" 
                  Width="400"
                  Fill="#CEECFF"
                  StrokeThickness="0"/>
 
-        <Ellipse HorizontalAlignment="Left" 
+            <Ellipse HorizontalAlignment="Left" 
                  Height="600" 
-                 Margin="1258,266,0,0" 
+                 Margin="1242,0,0,0" 
                  Stroke="Black" 
-                 VerticalAlignment="Top" 
+                 VerticalAlignment="Center" 
                  Width="600"
                  Fill="#CEECFF"
                  StrokeThickness="0"/>
 
-        <Ellipse HorizontalAlignment="Left" 
+            <Ellipse HorizontalAlignment="Left" 
                  Height="125" 
                  Width="125"
-                 Margin="1284,197,0,0" 
+                 Margin="1242,201,0,0" 
                  Stroke="Black" 
                  VerticalAlignment="Top"
                  Fill="#BDDFFF"
                  StrokeThickness="0"/>
 
-        <Ellipse HorizontalAlignment="Left" 
+            <Ellipse HorizontalAlignment="Left" 
                  Height="100" 
                  Width="100"
-                 Margin="10,602,0,0" 
+                 Margin="10,766,0,0" 
                  Stroke="Black" 
                  VerticalAlignment="Top"
                  Fill="#CEECFF"
                  StrokeThickness="0"/>
 
-        <Ellipse HorizontalAlignment="Left" 
+            <Ellipse HorizontalAlignment="Left" 
                  Height="200" 
                  Width="200"
-                 Margin="67,702,0,0" 
+                 Margin="30,882,0,0" 
                  Stroke="Black" 
                  VerticalAlignment="Top"
                  Fill="#BDDFFF"
                  StrokeThickness="0"/>
 
-        <Rectangle Fill="#CEECFF"
-                   Margin="-129,-96,0,671"
+            <Rectangle Fill="#CEECFF"
+                   Margin="-121,-224,-8,1063"
                    RadiusX="100"
                    RadiusY="100"/>
 
-        <Label Content="M  I  V  O  S  K  I" 
+            <Label Content="M  I  V  O  S  K  I" 
                FontFamily="Gabriola"
                FontSize="50"
                HorizontalAlignment="Left" 
                Margin="38,7,0,0" 
                VerticalAlignment="Top"/>
 
-        <Label Content="Fine jewelry, Restoration and Conservation" 
+            <Label Content="Fine jewelry, Restoration and Conservation" 
                FontFamily="Segoe UI Light"
                FontSize="15"
                HorizontalAlignment="Left" 
                Margin="30,74,0,0" 
                VerticalAlignment="Top"/>
 
-        <Button Content="Order" 
-                Margin="1296,23,39,711"
+            <Button Content="Order" 
+                Margin="1258,27,51,1097"
                 FontFamily="Segoe UI Light"
                 FontSize="20"
                 Height="60"
@@ -80,8 +84,8 @@
                 BorderBrush="{x:Null}"
                 Background="Transparent" Click="Button_Click_3"/>
 
-        <Button Content="Calendar" 
-            Margin="1178,24,149,710"
+            <Button Content="Calendar" 
+            Margin="1113,27,165,1097"
             FontFamily="Segoe UI Semibold"
             FontSize="20"
             Height="60"
@@ -89,18 +93,17 @@
             BorderBrush="{x:Null}"
             Background="Transparent" Click="Button_Click_2"/>
 
-        <Button Content="Steps" 
-            Margin="1068,23,272,711"
+            <Button Content="Steps" 
+            Margin="1008,28,302,1096"
             FontFamily="Segoe UI Light"
             FontSize="20"
             Height="60"
-            Width="100"
             Foreground="Black"
             BorderBrush="{x:Null}"
             Background="Transparent" Click="Button_Click_1"/>
 
-        <Button Content="Browse Other" 
-            Margin="903,24,377,710"
+            <Button Content="Browse Other" 
+            Margin="842,27,415,1097"
             FontFamily="Segoe UI Light"
             FontSize="20"
             Height="60"
@@ -108,30 +111,30 @@
             BorderBrush="{x:Null}"
             Background="Transparent" Click="Button_Click"/>
 
-        <Button Content="Browse Jewelry" 
-            Margin="720,23,537,711"
+            <Button Content="Browse Jewelry" 
+            Margin="646,27,581,1097"
             FontFamily="Segoe UI Light"
             FontSize="20"
             Height="60"
             Foreground="Black"
             BorderBrush="{x:Null}"
-            Background="Transparent"/>
+            Background="Transparent" RenderTransformOrigin="0.491,0.534"/>
 
-        <Label Content="M  I  V  O  S  K  I" 
+            <Label Content="M  I  V  O  S  K  I" 
                FontFamily="Gabriola"
                FontSize="70"
                HorizontalAlignment="Center" 
-               Margin="0,151,0,0" 
+               Margin="0,155,0,0" 
                VerticalAlignment="Top" Height="147"/>
 
-        <Label Content="Fine jewelry, Restoration and Conservation" 
+            <Label Content="Fine jewelry, Restoration and Conservation" 
                FontFamily="Segoe UI Light"
                FontSize="30"
                HorizontalAlignment="Left" 
                Margin="447,254,0,0" 
                VerticalAlignment="Top"/>
 
-        <TextBlock HorizontalAlignment="Left" 
+            <TextBlock HorizontalAlignment="Left" 
                    Text="Save an appointment with us in a few clicks! Choose your preferred  time for the meeting and we will send you a confirmation email." 
                    FontSize="30"
                 FontFamily="Segoe UI Light"
@@ -141,12 +144,58 @@
                    Height="82"
                    Width="984" Margin="225,325,0,0"/>
 
-        <Calendar HorizontalAlignment="Left" 
-                  Margin="477,422,0,0" 
+            <Calendar HorizontalAlignment="Left" 
+                  Margin="729,443,0,0" 
                   VerticalAlignment="Top"
                   Width="480" 
                   Height="480"
                   FontFamily="Segoe UI Light"/>
 
-    </Grid>
+            <TextBox x:Name="txtUser"
+                 TextWrapping="Wrap" 
+                 Margin="260,443,723,648"
+                 materialDesign:HintAssist.Hint="Enter your username:"
+                 FontFamily="Segoe UI Light"
+                 Foreground="Black"
+                 materialDesign:HintAssist.Foreground="#BDDFFF"
+                 materialDesign:TextFieldAssist.UnderlineBrush="#BDDFFF"
+                 Style="{DynamicResource MaterialDesignFloatingHintTextBox}"
+                 FontSize="25"
+                 Width="440" TextChanged="txtUser_TextChanged"/>
+
+            <TextBox x:Name="txtTime"
+                 TextWrapping="Wrap" 
+                 Margin="260,654,723,434"
+                 materialDesign:HintAssist.Hint="Enter the time of your appoinment:"
+                 FontFamily="Segoe UI Light"
+                 Foreground="Black"
+                 materialDesign:HintAssist.Foreground="#BDDFFF"
+                 materialDesign:TextFieldAssist.UnderlineBrush="#BDDFFF"
+                 Style="{DynamicResource MaterialDesignFloatingHintTextBox}"
+                 FontSize="25"
+                 Width="440"/>
+
+            <PasswordBox x:Name="pass"
+                 Margin="260,555,723,548"
+                 materialDesign:HintAssist.Hint="Enter password:"
+                 FontFamily="Segoe UI Light"
+                 Foreground="Black"
+                 materialDesign:HintAssist.Foreground="#BDDFFF"
+                 materialDesign:TextFieldAssist.UnderlineBrush="#BDDFFF"
+                 Style="{DynamicResource MaterialDesignFloatingHintPasswordBox}"
+                 FontSize="25"
+                 Width="440"/>
+
+            <Button Content="Confirm Appointment" 
+                    Margin="292,786,768,0"
+                    BorderBrush="#BDDFFF"
+                    BorderThickness="1"
+                    Background="#BDDFFF"
+                    VerticalAlignment="Top"
+                    FontSize="25"
+                    Height="100"
+                    FontFamily="Segoe UI Light"
+                    Foreground="Black"/>
+        </Grid>
+    </ScrollViewer>
 </Window>
